--- a/src/common.scss
+++ b/src/common.scss
@@ -43,3 +43,16 @@ input {
     width: 18em;
     margin: .5em;
 }
+.btn-smp{
+
+    width: 10em;  
+    margin: 1em; 
+    padding: 1.3em;
+    border: none;
+    border-radius: .3em;
+    background-color: #3d3d3d;
+    color: #f8f8f8;
+    cursor: pointer;
+
+
+}
